<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <GridLayout
        android:id="@+id/settings_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Space
            android:id="@+id/settings_hspace_start"
            android:layout_width="2dp"
            android:layout_height="2dp"
            android:layout_row="4"
            android:layout_column="0"/>
        <Space
            android:id="@+id/settings_hspace_end"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_row="4"
            android:layout_column="4"/>
        <Space
            android:id="@+id/settings_vspace_zoom"
            android:tag="space"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="2"/>
        <Space
            android:id="@+id/settings_vspace_longPressFlags"
            android:tag="space"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_column="2"/>
        <Space
            android:id="@+id/settings_vspace_useQuestionMark"
            android:tag="space"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_column="2"/>
        <Space
            android:id="@+id/settings_vspace_zoomLevel"
            android:tag="space"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_column="2"/>
        <Space
            android:id="@+id/settings_vspace_quickResetFace"
            android:tag="space"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="5"
            android:layout_column="2"/>
        <Space
            android:id="@+id/settings_vspace_hintBomb"
            android:tag="space"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="6"
            android:layout_column="2"/>
        <Space
            android:id="@+id/settings_vspace_storeGame"
            android:tag="space"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="7"
            android:layout_column="2"/>
        <Space
            android:id="@+id/settings_vspace_viewStoredGames"
            android:tag="space"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="8"
            android:layout_column="2"/>
        <Space
            android:id="@+id/settings_vspace_scrollSensitivity"
            android:tag="space"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="9"
            android:layout_column="2"/>

        <!-- zoom -->
        <com.nahollenbaugh.mines.views.TwoStateDrawnButton
            android:id="@+id/settings_button_zoom"
            android:tag="picture"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_row="1"
            android:layout_column="1"/>
        <TextView
            android:id="@+id/settings_label_zoom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:text="@string/settings_zoom"
            android:layout_row="1"
            android:layout_column="3"
            android:labelFor="@id/settings_button_zoom"
            />
        <!-- long press flags -->
        <com.nahollenbaugh.mines.views.TwoStateDrawnButton
            android:id="@+id/settings_button_longPressFlags"
            android:tag="picture"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_row="2"
            android:layout_column="1"/>
        <TextView
            android:id="@+id/settings_label_longPressFlags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:text="@string/settings_longPressFlags"
            android:layout_row="2"
            android:layout_column="3"
            android:labelFor="@id/settings_button_longPressFlags"
            />
        <!-- use question mark -->
        <com.nahollenbaugh.mines.views.TwoStateDrawnButton
            android:id="@+id/settings_button_useQuestionMark"
            android:tag="picture"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_row="3"
            android:layout_column="1"/>
        <TextView
            android:id="@+id/settings_label_useQuestionMark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:text="@string/settings_useQuestionMark"
            android:layout_row="3"
            android:layout_column="3"
            android:labelFor="@id/settings_button_useQuestionMark"
            />
        <!-- fixed zoom level -->
        <com.nahollenbaugh.mines.views.CounterView
            android:id="@+id/settings_counter_zoomLevel"
            android:tag="picture"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_row="4"
            android:layout_column="1"/>
        <com.nahollenbaugh.mines.views.LinearLayoutReorder
            android:id="@+id/settings_control_zoomLevel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:layout_row="4"
            android:layout_column="3"
            android:orientation="horizontal">
            <com.nahollenbaugh.mines.views.DrawnButton
                android:id="@+id/settings_button_decreaseZoomLevel"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:hint="@string/hint_decreaseFixedZoom"/>
            <com.nahollenbaugh.mines.views.DrawnButton
                android:id="@+id/settings_button_increaseZoomLevel"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:hint="@string/hint_decreaseFixedZoom"/>
            <TextView
                android:id="@+id/settings_label_zoomLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/settings_fixedZoom"/>
        </com.nahollenbaugh.mines.views.LinearLayoutReorder>
        <!-- quick reset face -->
        <com.nahollenbaugh.mines.views.TwoStateDrawnButton
            android:id="@+id/settings_button_quickResetFace"
            android:tag="picture"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_row="5"
            android:layout_column="1"/>
        <TextView
            android:id="@+id/settings_label_quickResetFace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:text="@string/settings_quickResetFace"
            android:layout_row="5"
            android:layout_column="3"
            android:labelFor="@id/settings_button_quickResetFace"/>
        <!-- hint bomb -->
        <com.nahollenbaugh.mines.views.TwoStateDrawnButton
            android:id="@+id/settings_button_hintBomb"
            android:tag="picture"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_row="6"
            android:layout_column="1"/>
        <TextView
            android:id="@+id/settings_label_hintBomb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:text="@string/settings_hintBomb"
            android:layout_row="6"
            android:layout_column="3"/>
        <!-- store game -->
        <com.nahollenbaugh.mines.views.DrawnButton
            android:id="@+id/settings_button_storeGame"
            android:tag="picture"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_row="7"
            android:layout_column="1"/>
        <TextView
            android:id="@+id/settings_label_storeGame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:text="@string/settings_storeGame"
            android:layout_row="7"
            android:layout_column="3"
            android:labelFor="@id/settings_button_storeGame"/>
        <!-- view stored games -->
        <com.nahollenbaugh.mines.views.DrawnButton
            android:id="@+id/settings_button_viewStoredGames"
            android:tag="picture"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_row="8"
            android:layout_column="1"/>
        <TextView
            android:id="@+id/settings_label_viewStoredGames"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:text="@string/settings_viewStoredGames"
            android:layout_row="8"
            android:layout_column="3"
            android:labelFor="@id/settings_button_viewStoredGames"/>
        <!-- scroll sensitivity -->
        <com.nahollenbaugh.mines.views.CounterView
            android:id="@+id/settings_counter_scrollSensitivity"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_row="9"
            android:layout_column="1"/>
        <com.nahollenbaugh.mines.views.LinearLayoutReorder
            android:id="@+id/settings_control_scrollSensitivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:layout_row="9"
            android:layout_column="3"
            android:orientation="horizontal">
            <com.nahollenbaugh.mines.views.DrawnButton
                android:id="@+id/settings_button_decreaseScrollSensitivity"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:hint="@string/hint_decreaseScrollSensitivity"/>
            <TextView
                android:id="@+id/settings_label_scrollSensitivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/settings_scrollSensitivity"
                />
            <com.nahollenbaugh.mines.views.DrawnButton
                android:id="@+id/settings_button_increaseScrollSensitivity"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:hint="@string/hint_increaseScrollSensitivity"/>
        </com.nahollenbaugh.mines.views.LinearLayoutReorder>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
