<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MenuFragment">

    <com.nahollenbaugh.mines.views.DrawnButton
        android:id="@+id/button_menu_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.nahollenbaugh.mines.views.DrawnButton
        android:id="@+id/button_menu_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <GridLayout
        android:id="@+id/gridlayout_menu_custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_menu_to_scores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_menu_bigstart">

        <TextView
            android:id="@+id/textview_menu_bombs_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowSpan="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:labelFor="@id/edittext_menu_bombs_input"
            android:text="@string/bombs" />

        <EditText
            android:id="@+id/edittext_menu_bombs_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:inputType="number"
            android:text="@integer/bombs_default"/>

        <TextView
            android:id="@+id/textview_menu_height_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/height" />

        <EditText
            android:id="@+id/edittext_menu_height_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:inputType="number"/>

        <TextView
            android:id="@+id/textview_menu_width_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/width" />

        <EditText
            android:id="@+id/edittext_menu_width_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:inputType="number"/>
        <Button
            android:id="@+id/button_menu_customstart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_start"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="2"/>
    </GridLayout>

    <Button
        android:id="@+id/button_menu_smallstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_menu_mediumstart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_menu_info" />

    <Button
        android:id="@+id/button_menu_mediumstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_menu_bigstart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_menu_smallstart" />

    <Button
        android:id="@+id/button_menu_bigstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/gridlayout_menu_custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_menu_mediumstart" />

    <Button
        android:id="@+id/button_menu_to_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoresbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
